// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Component matches child snapshot 1`] = `
<html
  lang="en"
>
  <head>
    <title>
      Hello, React SSR!
    </title>
  </head>
  <body>
    <h1>
      App Child Component
    </h1>
  </body>
</html>
`;

exports[`App Component matches no-child snapshot 1`] = `
<html
  lang="en"
>
  <head>
    <title>
      Hello, React SSR!
    </title>
  </head>
  <body />
</html>
`;
